--- a/asynchronousconcept/1.md
+++ b/asynchronousconcept/1.md
@@ -3,4 +3,5 @@ Node js library are asynchronous that is non-blocking i.e non-blocking
 It means node js based server never waits for an api to return the data.
 server moves to next api after calling it and notification mechanism of event of  node js
 helps server to get response from the previous api calls.
+It neverwauts to completion of task it goes to the next tasks.
 
